--- a/ProjetoIntegrador/CSS/style.css
+++ b/ProjetoIntegrador/CSS/style.css
@@ -390,3 +390,67 @@ body {
   display: none;
   color: chartreuse;
 }
+
+.container2 {
+  width: 80%;
+  margin: auto;
+  padding: 8px;
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  background-color: rgba(190, 190, 190, 0.1);
+  border-radius: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  border-radius: 20px;
+  padding: 5%;
+  text-align: center;
+  color: #e2e2e2;
+  text-decoration: none;
+}
+
+.produto{
+  background-color: #2e2e2e;
+  width: 100%;
+  height: 125px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+
+.nomeProduto{
+  font-size: 20px;
+  width: 100%;
+  height: 20px;
+}
+
+.qtdProduto{
+  width: 100%;
+}
+
+.imgProduto{
+  width: 20%;
+  height: 65px;
+}
+
+.imgProduto img{
+  height: 100%;
+  width: 100%;
+  max-width: 180px;
+  border-radius: 10%;
+}
+
+.descricaoProduto{
+  font-size: 16px;
+  width: 50%;
+  height: 65px;
+  padding-top: 20px;
+}
+
+.plus{
+  width: 15%;
+  height: 65px;
+}
+
+.minus{
+  width: 15%;
+  height: 65px;
+}
