--- a/ProjetoIntegrador/CSS/style.css
+++ b/ProjetoIntegrador/CSS/style.css
@@ -371,6 +371,7 @@ body {
   color: #f68e07;
 }
 
+/*TELA 2*/
 #usuarioCNPJ, #caracteristicasProduto{
   color: white;
   
@@ -391,6 +392,7 @@ body {
   color: chartreuse;
 }
 
+/*TELA3*/
 .container2 {
   width: 80%;
   margin: auto;
