--- a/ProjetoIntegrador/CSS/style.css
+++ b/ProjetoIntegrador/CSS/style.css
@@ -418,18 +418,14 @@ body {
   margin: 20px 0;
 }
 
-.nomeProduto{
+.nomeProduto, .qtdProduto{
   font-size: 20px;
-  width: 100%;
-  height: 20px;
-}
-
-.qtdProduto{
-  width: 100%;
+  text-align: center;
+  font-weight: bold;
 }
 
 .imgProduto{
-  width: 20%;
+  width: 100%;
   height: 65px;
 }
 
@@ -447,14 +443,8 @@ body {
   padding-top: 20px;
 }
 
-.plus{
-  width: 15%;
-  height: 65px;
-}
-
-.minus{
-  width: 15%;
-  height: 65px;
+.plus,.minus{
+  margin: 0 10px;
 }
 
 #campoCartao{
