--- a/2 semestre/web/web-app/Views/Produto/Create.cshtml
+++ b/2 semestre/web/web-app/Views/Produto/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
@@ -33,9 +33,9 @@
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Imagem" class="control-label"></label>
-                <input asp-for="Imagem" class="form-control-file" type="file" />
-                <span asp-validation-for="Imagem" class="text-danger"></span>
+                <label asp-for="urlImagem" class="control-label"></label>
+                <input asp-for="urlImagem" class="form-control" type="file" />
+                <span asp-validation-for="urlImagem" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
