--- a/2 semestre/web/web-app/Views/Produto/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Produto/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Preco)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.urlImagem)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -43,9 +46,12 @@
                 @Html.DisplayFor(modelItem => item.Preco)
             </td>
             <td>
+                    <img src="@item.urlImagem" alt="Imagem" />
+            </td>
+            <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
