Postagem: Model, Controller View

--- a/2 semestre/web/web-app/Views/Produto/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Produto/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Preco)
             </td>
             <td>
-                    <img src="./imgs/@item.urlImagem" alt="Imagem" />
+                    <img src="./imgs/Produto/@item.urlImagem" alt="Imagem" />
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
