--- a/2 semestre/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/web/web-app/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Postagem" asp-action="Index">Postagem</a>
+                        </li>
                     </ul>
                 </div>
             </div>
