--- a/2 semestre/web/web-app/Views/Postagem/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Postagem/Index.cshtml
@@ -3,7 +3,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -24,9 +24,11 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody>*@
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
 @foreach (var item in Model) {
-        <tr>
+       @* <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
@@ -47,7 +49,33 @@
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
             </td>
-        </tr>
+        </tr>*@
+
+  
+                <div class="col">
+                    <div class="card text-center bg-light">
+                        <img src="./imgs/Postagem/@item.UrlImagem" alt="Imagem" />
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">
+                                @Html.DisplayFor(modelItem => item.Usuario)
+                            </h5>
+                            <p class="card-body truncar-3l fw-bold border-top border-bottom">
+                                @Html.DisplayFor(modelItem => item.Descricao)
+                            </p>
+                        </div>
+                        <div class="card-text fw-bold">
+                            @Html.DisplayFor(modelItem => item.Curtidas)
+                        </div>
+                        <button type="button" class="btn-outline-danger">
+                            <img src="~/imgs/icons/cart.svg" />
+                        </button>
+                    </div>
+                </div>
+            
+   
 }
-    </tbody>
+   @* </tbody>
 </table>
+*@
+    </div>
+</div>
