--- a/2 semestre/web/web-app/Views/Postagem/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Postagem/Index.cshtml
@@ -26,56 +26,42 @@
     </thead>
     <tbody>*@
 <div class="container">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="container-fluid">
 @foreach (var item in Model) {
-       @* <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Curtidas)
-            </td>
-            <td>
-                <img src="./imgs/Postagem/@item.UrlImagem" alt="Imagem" />
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
-            </td>
-        </tr>*@
 
-  
-                <div class="col">
-                    <div class="card text-center bg-light">
+
+            <div class="card text-center bg-light mb-5">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title fw-bold">
+                            @Html.DisplayFor(modelItem => item.Usuario)
+                        </h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
                         <img src="./imgs/Postagem/@item.UrlImagem" alt="Imagem" />
-                        <div class="card-body">
-                            <h5 class="card-title fw-bold">
-                                @Html.DisplayFor(modelItem => item.Usuario)
-                            </h5>
-                            <p class="card-body truncar-3l fw-bold border-top border-bottom">
-                                @Html.DisplayFor(modelItem => item.Descricao)
-                            </p>
-                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
                         <div class="card-text fw-bold">
                             @Html.DisplayFor(modelItem => item.Curtidas)
                         </div>
-                        <button type="button" class="btn-outline-danger">
-                            <img src="~/imgs/icons/cart.svg" />
-                        </button>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="card-body truncar-3l fw-bold border-top border-bottom">
+                            @Html.DisplayFor(modelItem => item.Descricao)
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             
    
 }
-   @* </tbody>
-</table>
-*@
+
     </div>
 </div>
