--- a/2 semestre/web/web-app/Views/Produto/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Produto/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Novo Produto</a>
 </p>
 @*<table class="table">
     <thead>
@@ -42,7 +42,7 @@
                         <h5 class="card-title fw-bold">
                             @Html.DisplayFor(modelItem => item.Nome)
                         </h5>
-                        <p class="card-body truncar-3l fw-bold border-top border-bottom">
+                        <p class="card-body truncar-3l fw-bold border-top border-bottom text-nowrap ">
                             @Html.DisplayFor(modelItem => item.Descricao)
                         </p>
                     </div>
