--- a/2 semestre/web/web-app/Views/Login/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Login/Index.cshtml
@@ -14,11 +14,13 @@
     <aside>
         <div class="container">
             <div class="form">
-                <h3 class="title">Faça seu Login</h3>
+                <div class="d-flex justify-content-center">
+                    <h3 class="title">Faça seu Login</h3>
+                </div>
                 <form>
                     <!-- Email input -->
-                    <div class="form-outline mb-4">
-                        <input type="email" id="form2Example1" class="form-control" />
+                    <div class="form-outline mb-4 g-3">
+                        <input type="email" id="form2Example1" class="form-control"/>
                         <label class="form-label" for="form2Example1">Email address</label>
                     </div>
 
@@ -45,26 +47,41 @@
                     </div>
 
                     <!-- Submit button -->
-                    <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+                    <div class="d-flex justify-content-center">
+                        <button type="button" class="btn btn-primary btn-block mb-4" style="width:200px;">Sign in</button>
+                    </div>
 
                     <!-- Register buttons -->
                     <div class="text-center">
                         <p>Not a member? <a asp-controller="Login" asp-action="Create">Register</a></p>
                         <p>or sign up with:</p>
-                        <button type="button" class="btn btn-link btn-floating mx-1">
-                            <i class="fab fa-facebook-f"></i>
+                        <button type="button" class="btn btn-link btn-floating mx-1 ">
+                            <i class="fab fa-facebook-f">
+                                <img src="~/imgs/icons/facebook.svg" style="height: 25px;
+              width: 25px;" />
+                            </i>
+                            
                         </button>
 
                         <button type="button" class="btn btn-link btn-floating mx-1">
-                            <i class="fab fa-google"></i>
+                            <i class="fab fa-google">
+                                <img src="~/imgs/icons/google.svg" style="height: 25px;
+              width: 25px;" />
+                            </i>
                         </button>
 
                         <button type="button" class="btn btn-link btn-floating mx-1">
-                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-twitter">
+                                <img src="~/imgs/icons/twitter.svg" style="height: 25px;
+              width: 25px;" />
+                            </i>
                         </button>
 
                         <button type="button" class="btn btn-link btn-floating mx-1">
-                            <i class="fab fa-github"></i>
+                            <i class="fab fa-github">
+                                <img src="~/imgs/icons/github.svg" style="height: 25px;
+              width: 25px;" />
+                            </i>
                         </button>
                     </div>
                 </form>
