--- a/2 semestre/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/web/web-app/Views/Shared/_Layout.cshtml
@@ -72,8 +72,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="footer text-muted">
+        <div class="container fixed-bottom">
             &copy; 2023 - web_app - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
