--- a/2 semestre/web/web-app/Views/Login/Create.cshtml
+++ b/2 semestre/web/web-app/Views/Login/Create.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
+                <input asp-for="Senha" class="form-control" type="password" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
