--- a/2 semestre/web/web-app/Views/Produto/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Produto/Index.cshtml
@@ -47,7 +47,7 @@
                         </p>
                     </div>
                     <div class="card-text fw-bold">
-                        @Html.DisplayFor(modelItem => item.Preco)
+                        <p>R$ @Html.DisplayFor(modelItem => item.Preco)</p>
                     </div>
                     <button type="button" class="btn-outline-danger">
                         <img src="~/imgs/icons/cart.svg" />
