--- a/2 semestre/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/web/web-app/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Postagem" asp-action="Index">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Postagem" asp-action="Create">
                                 <img src="~/imgs/icons/house.svg" style="height: 25px;
               width: 25px;" />
                             </a>
