--- a/2 semestre/web/web-app/Views/Postagem/Index.cshtml
+++ b/2 semestre/web/web-app/Views/Postagem/Index.cshtml
@@ -5,9 +5,8 @@
 </p>
 <div class="container">
     <div class="container-fluid">
-@foreach (var item in Model) {
-
-
+@foreach (var item in Model) 
+{
             <div class="card text-center bg-light mb-5">
                 <div class="row">
                     <div class="col">
@@ -36,10 +35,6 @@
                     </div>
                 </div>
             </div>
-
-            
-   
 }
-
     </div>
 </div>
