--- a/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
@@ -10,31 +10,49 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/web_app.styles.css" asp-append-version="true" />
 </head>
 <body>
 
-<h4>Login</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login">
+    <div class="container">
+        <h4>Login</h4>
+        <hr />
+        <form asp-action="Login" class="needs-validation" novalidate>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Usuario" class="control-label"></label>
-                <input asp-for="Usuario" class="form-control" />
+                <input asp-for="Usuario" class="form-control" required />
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter a valid username.
+                </div>
                 <span asp-validation-for="Usuario" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
+                <input asp-for="Senha" class="form-control" required />
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter a valid password.
+                </div>
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Logar" class="btn btn-primary" />
             </div>
         </form>
+        <div class="mt-3">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Create">Criar conta</a>
+        </div>
     </div>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
