--- a/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Index.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Index.cshtml
@@ -53,7 +53,7 @@
                         <img src="~/imgs/icons/cart.svg" />
                     </button>
                 </div>
-                @Html.ActionLink("Edit", "Edit", new {/*id=item.PrimaryKey*/})
+                @Html.ActionLink("Edit", "Edit", new {id=item.Id})
                 @Html.ActionLink("Excluir", "Delete", new {id=item.Id})
             </div>
         }
