--- a/2 semestre/PRINCIPAL/web/web-app/Views/Postagem/Create.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Postagem/Create.cshtml
@@ -5,24 +5,33 @@
 <div class="row d-flex justify-content-center">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @* <div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
+            @*<div class="form-group">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="No que esta pensando hoje?" style="resize: none; border: 2px; border-radius: 12px;
+            padding: 7px; width:500px;"></textarea>
+            </div>*@
             <div class="form-group">
-                <label asp-for="Descricao" class="control-label"></label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="resize: none;"></textarea>
-                <span asp-validation-for="Descricao" class="text-danger"></span>
+                <input asp-for="Descricao" class="form-control" style=" height:100px; width:300px;" />
+                <span asp-validation-for="Descricao" class="text-danger" style="display:none;"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UrlImagem" class="control-label"> </label>
-                <input asp-for="UrlImagem" class="form-control" type="file" />
-                <span asp-validation-for="UrlImagem" class="text-danger"></span>
+                <label for="uploadImage">
+                    <img src="~/imgs/icons/imagemUpload.svg" style="width:50px;" />
+                </label>
+                <input asp-for="UrlImagem" type="file" id="uploadImage" style="display:none;" />
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Postar" class="btn btn-primary" />
             </div>
+
         </form>
     </div>
 </div>
 
+
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
