--- a/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
@@ -17,37 +17,38 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container ">
         <h4>Login</h4>
         <hr />
         <form asp-action="Login" class="needs-validation" novalidate>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Usuario" class="control-label"></label>
-                <input asp-for="Usuario" class="form-control" required />
-                <div class="valid-feedback">
-                    Parece bom!
+            <div asp-validation-summary="ModelOnly" class="text-danger" ></div>
+                <div class="form-group  ">
+                    <label asp-for="Usuario" class="control-label"></label>
+                    <input asp-for="Usuario" class="form-control" required />
+                    <div class="valid-feedback">
+                        Parece bom!
+                    </div>
+                    <div class="invalid-feedback">
+                       Por favor entre com um nome de usuario valido!
+                    </div>
+                    <span asp-validation-for="Usuario" class="text-danger"></span>
                 </div>
-                <div class="invalid-feedback">
-                   Por favor entre com um nome de usuario valido!
+                <div class="form-group">
+                    <label asp-for="Senha" class="control-label"></label>
+                    <input asp-for="Senha" class="form-control" required />
+                    <div class="valid-feedback">
+                        Parece bom!
+                    </div>
+                    <div class="invalid-feedback">
+                        Por favor, entre com uma senha valida!
+                    </div>
+                    <span asp-validation-for="Senha" class="text-danger"></span>
                 </div>
-                <span asp-validation-for="Usuario" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" required />
-                <div class="valid-feedback">
-                    Parece bom!
+                <div class="form-group mt-3 d-flex justify-content-evenly">
+                    <input type="submit" value="Logar" class="btn btn-primary" style="width:110px;" />
+                    <a class="btn btn-primary" style="width:110px;" asp-area="" asp-controller="Login" asp-action="Create">Criar conta</a>
                 </div>
-                <div class="invalid-feedback">
-                    Por favor, entre com uma senha valida!
-                </div>
-                <span asp-validation-for="Senha" class="text-danger"></span>
-            </div>
-            <div class="form-group mt-3">
-                <input type="submit" value="Logar" class="btn btn-primary" />
-                <a class="btn btn-primary" asp-area="" asp-controller="Login" asp-action="Create">Criar conta</a>
-            </div>
+            
         </form>
        @* <div class="mt-3">
             <a class="btn btn-primary" asp-area="" asp-controller="Login" asp-action="Create">Criar conta</a>
