--- a/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Postagem" asp-action="">
+                <a class="navbar-brand" asp-area="" asp-controller="Postagem" asp-action="Index">
                     <img src="~/imgs/icons/logo.png" style="height: 100px;
               width: 100px;" />
                 </a>
