--- a/2 semestre/PRINCIPAL/web/web-app/Views/Postagem/Create.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Postagem/Create.cshtml
@@ -11,20 +11,20 @@
             padding: 7px; width:500px;"></textarea>
             </div>*@
             <div class="form-group">
-                <input asp-for="Descricao" class="form-control" style=" height:100px; width:300px;" />
-                <span asp-validation-for="Descricao" class="text-danger" style="display:none;"></span>
+                <input asp-for="Descricao" class="form-control" style=" height:100px; width:412px;" />
+                <span asp-validation-for="Descricao" class="text-danger" ></span>
             </div>
-            <div class="form-group">
-                <label for="uploadImage">
-                    <img src="~/imgs/icons/imagemUpload.svg" style="width:50px;" />
-                </label>
-                <input asp-for="UrlImagem" type="file" id="uploadImage" style="display:none;" />
-
+            <div class="d-flex justify-content-around m-2">
+                <div class="form-group">
+                    <label for="uploadImage">
+                        <img src="~/imgs/icons/imagemUpload.svg" style="width:40px;" />
+                    </label>
+                    <input asp-for="UrlImagem" type="file" id="uploadImage" style="display:none;"/>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Postar" class="btn btn-primary" />
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Postar" class="btn btn-primary" />
-            </div>
-
         </form>
     </div>
 </div>
