--- a/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
@@ -22,7 +22,6 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-flex justify-content-end align-items-center">
-                    <!-- Alteração na classe da div -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Postagem" asp-action="Index">
@@ -43,7 +42,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Login">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">
                                 <img src="~/imgs/icons/login.svg" style="height: 25px;
               width: 25px;" />
                             </a>
