--- a/2 semestre/PRINCIPAL/web/web-app/wwwroot/css/site.css
+++ b/2 semestre/PRINCIPAL/web/web-app/wwwroot/css/site.css
@@ -7,6 +7,15 @@ html {
         font-size: 16px;
     }
 }
+@media(max-width: 820px) {
+    .container {
+    flex-direction: column;
+    }
+
+    .container > div {
+    margin-bottom: 10px;
+    }
+}
 
 html {
     position: relative;
